arob_ws/src/arob_lab_drones/log/build_2025-12-17_16-45-11/arob_lab_drones/stdout_stderr.log
running egg_info
writing build/arob_lab_drones/arob_lab_drones.egg-info/PKG-INFO
writing dependency_links to build/arob_lab_drones/arob_lab_drones.egg-info/dependency_links.txt
writing entry points to build/arob_lab_drones/arob_lab_drones.egg-info/entry_points.txt
writing requirements to build/arob_lab_drones/arob_lab_drones.egg-info/requires.txt
writing top-level names to build/arob_lab_drones/arob_lab_drones.egg-info/top_level.txt
reading manifest file 'build/arob_lab_drones/arob_lab_drones.egg-info/SOURCES.txt'
writing manifest file 'build/arob_lab_drones/arob_lab_drones.egg-info/SOURCES.txt'
running build
running build_py
copying arob_lab_drones/drone_race.py -> /root/arob_ws/src/arob_lab_drones/build/arob_lab_drones/build/lib/arob_lab_drones
running install
running install_lib
copying /root/arob_ws/src/arob_lab_drones/build/arob_lab_drones/build/lib/arob_lab_drones/drone_race.py -> /root/arob_ws/src/arob_lab_drones/install/arob_lab_drones/lib/python3.10/site-packages/arob_lab_drones
byte-compiling /root/arob_ws/src/arob_lab_drones/install/arob_lab_drones/lib/python3.10/site-packages/arob_lab_drones/drone_race.py to drone_race.cpython-310.pyc
  File "/root/arob_ws/src/arob_lab_drones/install/arob_lab_drones/lib/python3.10/site-packages/arob_lab_drones/drone_race.py", line 903
    print('Drone Race Node launchedsd'
         ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
removing '/root/arob_ws/src/arob_lab_drones/install/arob_lab_drones/lib/python3.10/site-packages/arob_lab_drones-0.0.0-py3.10.egg-info' (and everything under it)
Copying build/arob_lab_drones/arob_lab_drones.egg-info to /root/arob_ws/src/arob_lab_drones/install/arob_lab_drones/lib/python3.10/site-packages/arob_lab_drones-0.0.0-py3.10.egg-info
running install_scripts
Installing drone_race script to /root/arob_ws/src/arob_lab_drones/install/arob_lab_drones/lib/arob_lab_drones
writing list of installed files to '/root/arob_ws/src/arob_lab_drones/build/arob_lab_drones/install.log'
